Bug 107868 Don't use Boolean constructor